# parsalov_bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
parsers/: telegram.py  vk.py
vk/dima/: messages0.html  messages1000.html  messages10000.html  messages10200.html  messages10250.html  messages10300.html  messages10350.html  messages10400.html  messages10450.html  messages10500.html  messages10650.html  messages10700.html  messages10750.html  messages10850.html  messages10900.html  messages10950.html  messages11000.html  messages11050.html  messages11100.html  messages11150.html  messages11250.html  messages11300.html  messages11350.html  messages11400.html  messages11450.html  messages11500.html  messages11650.html  messages11700.html  messages11750.html  messages11800.html  messages11850.html  messages11950.html  messages12000.html  messages12200.html  messages12250.html  messages12350.html  messages1250.html  messages12550.html  messages12600.html  messages12650.html  (+349 more)
vk/fitsa/: messages0.html  messages10050.html  messages10100.html  messages10300.html  messages10350.html  messages10400.html  messages10450.html  messages10550.html  messages10900.html  messages1100.html  messages11100.html  messages11200.html  messages11400.html  messages11450.html  messages11500.html  messages11550.html  messages11650.html  messages11750.html  messages11800.html  messages12000.html  messages12050.html  messages12150.html  messages12200.html  messages12250.html  messages12300.html  messages12550.html  messages12600.html  (+625 more)
(+3298 files in other folders)
